--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
